--- a/.github/workflows/check_plugins.yml
+++ b/.github/workflows/check_plugins.yml
@@ -13,6 +13,8 @@ on:
       - 'addons/sourcemod/scripting/**/*.inc'
     branches:
       - master
+    tags:
+      - 'v*'
   workflow_dispatch:
     paths:
       - 'addons/sourcemod/scripting/**/*.sp'
@@ -28,14 +30,12 @@ jobs:
       fail-fast: false
       matrix:
         sm_version:
-          #- "1.9"
-          #- "1.10"
-          #- "1.11"
           - "1.12"
           - "1.13"
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Set environment variables
         run: |
           echo "SCRIPTS_PATH=$GITHUB_WORKSPACE/addons/sourcemod/scripting" >> $GITHUB_ENV
@@ -47,16 +47,22 @@ jobs:
 
       - name: Compile plugins
         run: |
+          OUTPUT_DIR=$GITHUB_WORKSPACE/compiled-plugins/sm${{ matrix.sm_version }}
+          mkdir -p $OUTPUT_DIR
+          
           errors=0
           for file in *.sp
           do
-            echo -e "\nCompiling $file..."
-            spcomp -E -w234 -w217 -O2 -v2 -i $SCRIPTS_PATH/include $file || {
+            echo -e "\nCompiling $file for SM ${{ matrix.sm_version }}..."
+            FILENAME=$(basename "$file" .sp)
+            spcomp -E -w234 -w217 -O2 -v2 -i $SCRIPTS_PATH/include -o $OUTPUT_DIR/$FILENAME.smx $file ||
+            {
               errors=$((errors + 1))
               continue
             }
           done
-          if [ "$errors" -gt 0 ]; then
+          if [ "$errors" -gt 0 ];
+          then
             echo -e "\n$errors plugin(s) failed to compile."
             exit 1
           else
@@ -64,3 +70,32 @@ jobs:
             exit 0
           fi
         working-directory: ${{ env.SCRIPTS_PATH }}/
+
+      - name: Upload compiled plugins (sm${{ matrix.sm_version }})
+        uses: actions/upload-artifact@v4
+        with:
+          name: compiled-plugins-sm${{ matrix.sm_version }}
+          path: ${{ github.workspace }}/compiled-plugins/sm${{ matrix.sm_version }}
+
+  release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+
+    steps:
+      - name: Download all compiled plugins from build job
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Zip all plugins
+        run: |
+          zip -r plugins-release.zip ./artifacts
+
+      - name: Create Release and Upload Asset
+        uses: softprops/action-gh-release@v1
+        with:
+          files: plugins-release.zip
+          tag_name: ${{ github.ref_name }}
+          generate_release_notes: true
